Fix oversized cropped logo scaling

--- a/public/logo-fix.css
+++ b/public/logo-fix.css
@@ -4,10 +4,9 @@
   height: 92px !important;
   background-image: url('./Created By Crump_2747 Tees  - Artboard 8_1761333319.png') !important;
   background-repeat: no-repeat !important;
-  background-position: center 46% !important;
-  background-size: 520px auto !important;
+  background-position: center center !important;
+  background-size: contain !important;
   flex-shrink: 0 !important;
-  overflow: hidden !important;
 }
 
 .logo > * {
@@ -19,10 +18,9 @@
   min-height: 56px !important;
   background-image: url('./Created By Crump_2747 Tees  - Artboard 8_1761333319.png') !important;
   background-repeat: no-repeat !important;
-  background-position: center 46% !important;
-  background-size: 350px auto !important;
+  background-position: left center !important;
+  background-size: contain !important;
   color: transparent !important;
-  overflow: hidden !important;
 }
 
 .footer .mini-logo * {
@@ -33,12 +31,10 @@
   .logo {
     width: 250px !important;
     height: 70px !important;
-    background-size: 395px auto !important;
   }
 
   .footer .mini-logo {
     width: 170px !important;
     min-height: 42px !important;
-    background-size: 270px auto !important;
   }
 }
